// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconPlay renders correctly with isPlaying 1`] = `
<Component
  id="pause"
/>
`;

exports[`IconPlay renders correctly without isPlaying 1`] = `
<Component
  id="play"
/>
`;
